--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,11 +21,6 @@ bin_PROGRAMS = get2gnow
 if HAVE_GNOME_KEYRING
 keyring_sources = keyring.c keyring.h
 endif
-if ENABLE_ALPHA_UI
-get2gnow_ui_sources = uberchick-label.alpha.c
-else
-get2gnow_ui_sources = uberchick-label.c
-endif
 
 get2gnow_SOURCES = 													\
 	about.c						about.h								\
@@ -59,9 +54,9 @@ get2gnow_SOURCES = 													\
 	searches.c					searches.h							\
 	tabs.c						tabs.h								\
 	timer.c						timer.h								\
-	$(get2gnow_ui_sources)				uberchick-label.h						\
+	uberchick-label.c				uberchick-label.h						\
 	uberchick-sexy-entry-completion.c		uberchick-sexy-entry-completion.h				\
-	uberchick-tree-view.c		uberchick-tree-view.macros.h		uberchick-tree-view.h			\
+	uberchick-tree-view.c	uberchick-tree-view.macros.h	uberchick-tree-view.types.h	uberchick-tree-view.h	\
 	ui-utils.c					ui-utils.h							\
 	update-ids.c					update-ids.h							\
 	update-viewer.c					update-viewer.h							\
