--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], ["030303a09"], [http://bugzilla.gnome.org/enter_bug.cgi?product=get2gnow], [get2gnow])
+AC_INIT([get2gnow], ["030303a10"], [http://bugzilla.gnome.org/enter_bug.cgi?product=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -96,6 +96,18 @@ AC_SUBST(get2gnow_CFLAGS)
 AC_SUBST(get2gnow_LIBS)
 
 dnl /************************************************************
+dnl *   GNOME_ENABLE_DEBUG support                              *
+dnl /************************************************************
+AM_CONDITIONAL(GNOME_ENABLE_DEBUG, test x$enable_debug = xyes)
+
+if test x$enable_debug = xyes ; then
+	debug_CFLAGS="-g -ggdb"
+	echo "#define GNOME_ENABLE_DEBUG 1" >> confdefs.h
+	enable_gdb=yes;
+fi
+
+
+dnl /************************************************************
 dnl *    gdb support                                            *
 dnl /************************************************************
 AM_CONDITIONAL(debug_CFLAGS="-g3 -ggdb", test x$enable_gdb = xyes)
@@ -105,28 +117,12 @@ if test x$enable_gdb = xyes ; then
 fi
 
 dnl /************************************************************
-dnl *   GNOME_ENABLE_DEBUG support                              *
-dnl /************************************************************
-AM_CONDITIONAL(GNOME_ENABLE_DEBUG, test x$enable_debug = xyes)
-
-if test x$enable_debug = xyes ; then
-	debug_CFLAGS="-g -ggdb"
-	echo "#define GNOME_ENABLE_DEBUG 1" >> confdefs.h
-fi
-
-
-dnl /************************************************************
 dnl *   ALPHA UI enabled                                        *
 dnl /************************************************************
 AM_CONDITIONAL(ENABLE_ALPHA_UI, test x$enable_alpha_ui = xyes)
 
 if test x$enable_alpha_ui = xyes ; then
 	echo "#define ENABLE_ALPHA_UI 1" >> confdefs.h
-	ENABLE_ALPHA_UI=""
-	DISABLE_ALPHA_UI="#"
-else
-	ENABLE_ALPHA_UI="#"
-	DISABLE_ALPHA_UI=""
 fi
 
 
@@ -156,6 +152,9 @@ if `test -e "${prefix}/share/icons/hicolor/scalable/apps/get2gnow.svg"` && test 
 else
 	printf "%s will be installed and make install will attempt to update GTK's icon cache.\n" ${PACKAGE_NAME};
 	gtk_update_icon_cache="gtk_update_icon_cache=gtk-update-icon-cache -f -t \$(datadir)/icons/hicolor";
+	if test x$enable_gtk_icon_update = xno; then
+		enable_gtk_icon_update=yes;
+	fi
 fi;
 
 AC_SUBST(gtk_update_icon_cache)
