--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -47,96 +47,100 @@ am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 @HAVE_GNOME_KEYRING_TRUE@keyring_sources = keyring.c keyring.h
-get2gnow_SOURCES = 													\
-	about.c						about.h								\
-	best-friends.c					best-friends.h							\
-	cache.c						cache.h								\
-	datetime.c					datetime.h							\
-	debug.c						debug.h								\
-	following-viewer.c				following-viewer.h						\
-	friend-manager.c				friend-manager.h						\
-	gconfig.c					gconfig.h							\
-	geometry.c					geometry.h							\
-	groups.c				groups.types.h			groups.h				\
-	gtkbuilder.c					gtkbuilder.h							\
-	hotkeys.c					hotkeys.h							\
-	images.c					images.h							\
-	ipc.c						ipc.h								\
-	$(keyring_sources)												\
-	main.c						main.h								\
-	main-window.c					main-window.h							\
-	network.c					network.h							\
-	online-services.typedefs.h			online-services.rest-uri.defines.h				\
-	online-service.c				online-service.typedefs.h		online-service.h	\
-	online-service-request.c			online-service-request.h					\
-	online-services.c				online-services.h						\
-	online-services-dialog.c			online-services-dialog.h					\
-	online-service-wrapper.c			online-service-wrapper.h					\
-	preferences.c					preferences.h							\
-	profile-manager.c				profile-manager.h						\
-	program.c					program.h							\
-	proxy.c						proxy.h								\
-	searches.c					searches.h							\
-	tabs.c						tabs.h								\
-	timelines.c					timelines.h							\
-	timer.c						timer.h								\
-	uberchick-label.c				uberchick-label.h						\
-	uberchick-sexy-entry-completion.c		uberchick-sexy-entry-completion.h				\
-	uberchick-tree-view.c	uberchick-tree-view.macros.h	uberchick-tree-view.types.h	uberchick-tree-view.h	\
-	ui-utils.c					ui-utils.h							\
-	update-ids.c					update-ids.h							\
-	update-viewer.c					update-viewer.h							\
-	users-glists.c					users-glists.h							\
-	users.c				users.types.h			users.h						\
-	user-profile-viewer.c				user-profile-viewer.h						\
-	xml.c				xml.types.h			xml.h						\
-	www.c						www.h								\
+get2gnow_SOURCES = 															\
+	about.c						about.h										\
+	best-friends.c					best-friends.h									\
+	cache.c						cache.h										\
+	datetime.c					datetime.h									\
+	debug.c						debug.h										\
+	following-viewer.c				following-viewer.h								\
+	friend-manager.c				friend-manager.h								\
+	gconfig.c					gconfig.h									\
+	geometry.c					geometry.h									\
+	groups.c				groups.types.h			groups.h						\
+	gtkbuilder.c					gtkbuilder.h									\
+	hotkeys.c					hotkeys.h									\
+	images.c					images.h									\
+	ipc.c						ipc.h										\
+	$(keyring_sources)														\
+	main.c						main.h										\
+	main-window.c					main-window.h									\
+	network.c					network.h									\
+	online-services.typedefs.h			online-services.rest-uri.defines.h						\
+	online-service.c				online-service.typedefs.h		online-service.h			\
+	online-service-request.c		online-service-request.types.h		online-service-request.h			\
+	online-service-requested-resource.c	online-service-requested-resource.types.h	online-service-requested-resource.h	\
+	online-services.c				online-services.h								\
+	online-services-dialog.c			online-services-dialog.h							\
+	online-service-wrapper.c			online-service-wrapper.h							\
+	preferences.c					preferences.h									\
+	profile-manager.c				profile-manager.h								\
+	program.c					program.h									\
+	proxy.c						proxy.h										\
+	searches.c					searches.h									\
+	tabs.c						tabs.h										\
+	timelines.c					timelines.h									\
+	timer.c						timer.h										\
+	uberchick-label.c				uberchick-label.h								\
+	uberchick-sexy-entry-completion.c		uberchick-sexy-entry-completion.h						\
+	uberchick-tree-view.c	uberchick-tree-view.macros.h	uberchick-tree-view.types.h	uberchick-tree-view.h			\
+	ui-utils.c					ui-utils.h									\
+	update.c					update.h							\
+	update-ids.c					update-ids.h									\
+	update-viewer.c					update-viewer.h									\
+	users-glists.c					users-glists.h									\
+	users.c					users.types.h			users.h							\
+	user-profile-viewer.c				user-profile-viewer.h								\
+	xml.c					xml.types.h			xml.h							\
+	www.c						www.h										\
 
 
 @HAVE_GNOME_KEYRING_TRUE@am__objects_1 = keyring.$(OBJEXT)
-get2gnow_OBJECTS =													\
-	about.$(OBJEXT)													\
-	best-friends.$(OBJEXT)												\
-	cache.$(OBJEXT)													\
-	datetime.$(OBJEXT)												\
-	debug.$(OBJEXT)													\
-	following-viewer.$(OBJEXT)											\
-	friends-manager.$(OBJEXT)											\
-	gconfig.$(OBJEXT)												\
-	geometry.$(OBJEXT)												\
-	groups.$(OBJEXT)												\
-	gtkbuilder.$(OBJEXT)												\
-	hotkeys.$(OBJEXT)												\
-	images.$(OBJEXT)												\
-	ipc.$(OBJEXT)													\
-	$(am__objects_1)												\
-	main.$(OBJEXT)													\
-	main-window.$(OBJEXT)												\
-	network.$(OBJEXT)												\
-	online-service.$(OBJEXT)											\
-	online-service-request.$(OBJEXT)										\
-	online-services-dialog.$(OBJEXT)										\
-	online-services.$(OBJEXT)											\
-	online-service-wrapper.$(OBJEXT)										\
-	preferences.$(OBJEXT)												\
-	profile-manager.$(OBJEXT)											\
-	program.$(OBJEXT)												\
-	proxy.$(OBJEXT)													\
-	searches.$(OBJEXT)												\
-	tabs.$(OBJEXT)													\
-	timelines.$(OBJEXT)												\
-	timer.$(OBJEXT)													\
-	uberchick-label.$(OBJEXT)											\
-	uberchick-sexy-entry-completion.$(OBJEXT)									\
-	uberchick-tree-view.$(OBJEXT)											\
-	ui-utils.$(OBJEXT)												\
-	update-ids.$(OBJEXT)												\
-	update-viewer.$(OBJEXT)												\
-	users-glists.$(OBJEXT)												\
-	users.$(OBJEXT)													\
-	user-profile-viewer.$(OBJEXT)											\
-	xml.$(OBJEXT)													\
-	www.$(OBJEXT)													\
+get2gnow_OBJECTS =															\
+	about.$(OBJEXT)															\
+	best-friends.$(OBJEXT)														\
+	cache.$(OBJEXT)															\
+	datetime.$(OBJEXT)														\
+	debug.$(OBJEXT)															\
+	following-viewer.$(OBJEXT)													\
+	friends-manager.$(OBJEXT)													\
+	gconfig.$(OBJEXT)														\
+	geometry.$(OBJEXT)														\
+	groups.$(OBJEXT)														\
+	gtkbuilder.$(OBJEXT)														\
+	hotkeys.$(OBJEXT)														\
+	images.$(OBJEXT)														\
+	ipc.$(OBJEXT)															\
+	$(am__objects_1)														\
+	main.$(OBJEXT)															\
+	main-window.$(OBJEXT)														\
+	network.$(OBJEXT)														\
+	online-service.$(OBJEXT)													\
+	online-service-request.$(OBJEXT)												\
+	online-service-requested-resource.$(OBJEXT)											\
+	online-services-dialog.$(OBJEXT)												\
+	online-services.$(OBJEXT)													\
+	online-service-wrapper.$(OBJEXT)												\
+	preferences.$(OBJEXT)														\
+	profile-manager.$(OBJEXT)													\
+	program.$(OBJEXT)														\
+	proxy.$(OBJEXT)															\
+	searches.$(OBJEXT)														\
+	tabs.$(OBJEXT)															\
+	timelines.$(OBJEXT)														\
+	timer.$(OBJEXT)															\
+	uberchick-label.$(OBJEXT)													\
+	uberchick-sexy-entry-completion.$(OBJEXT)											\
+	uberchick-tree-view.$(OBJEXT)													\
+	ui-utils.$(OBJEXT)														\
+	update.$(OBJEXT)														\
+	update-ids.$(OBJEXT)														\
+	update-viewer.$(OBJEXT)														\
+	users-glists.$(OBJEXT)														\
+	users.$(OBJEXT)															\
+	user-profile-viewer.$(OBJEXT)													\
+	xml.$(OBJEXT)															\
+	www.$(OBJEXT)															\
 
 
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -440,6 +444,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/network.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/online-service.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/online-service-request.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/online-service-requested-resource.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/online-services-dialog.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/online-services.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/online-service-wrapper.Po@am__quote@
@@ -455,6 +460,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/uberchick-sexy-entry-completion.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/uberchick-tree-view.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ui-utils.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/update.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/update-ids.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/update-viewer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/users-glists.Po@am__quote@
