--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -85,7 +85,7 @@ get2gnow_SOURCES = 															\
 	uberchick-sexy-entry-completion.c		uberchick-sexy-entry-completion.h						\
 	uberchick-tree-view.c	uberchick-tree-view.macros.h	uberchick-tree-view.types.h	uberchick-tree-view.h			\
 	ui-utils.c					ui-utils.h									\
-	update.c					update.h							\
+	update.c				update.types.h		update.h					\
 	update-ids.c					update-ids.h									\
 	update-viewer.c					update-viewer.h									\
 	users-glists.c					users-glists.h									\
