--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], ["030303a18"], [http://bugzilla.gnome.org/enter_bug.cgi?product=get2gnow], [get2gnow])
+AC_INIT([get2gnow], ["030303a20"], [http://bugzilla.gnome.org/enter_bug.cgi?product=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -95,9 +95,21 @@ PKG_CHECK_MODULES(get2gnow,
 AC_SUBST(get2gnow_CFLAGS)
 AC_SUBST(get2gnow_LIBS)
 
+
+
+dnl *******************************************************************
+dnl * Rather to enable the system alert and system button sounds.     *
+dnl *	This may cause pulseaudio related segfaults on some systems.  *
+dnl *******************************************************************
+
+
 dnl *************************************************************
 dnl *   GNOME_ENABLE_DEBUG support                              *
 dnl *************************************************************
+AC_ARG_ENABLE(debug,
+	      AS_HELP_STRING([--enable-debug=@<:@no/yes@:>@],
+		             [turn on debug mode and gdb debugging symbols]), ,
+              enable_debug=no)
 AM_CONDITIONAL(GNOME_ENABLE_DEBUG, test x$enable_debug = xyes)
 
 if test x$enable_debug = xyes ; then
@@ -110,6 +122,10 @@ fi
 dnl ************************************************************
 dnl *    gdb support                                           *
 dnl ************************************************************
+AC_ARG_ENABLE(gdb,
+	      AS_HELP_STRING([--enable-gdb=@<:@no/yes@:>@],
+		             [turn on gdb debugging symbols]), ,
+              enable_gdb=yes)
 AM_CONDITIONAL(debug_CFLAGS="-g3 -ggdb", test x$enable_gdb = xyes)
 
 if test x$enable_gdb = xyes ; then
@@ -124,6 +140,12 @@ dnl  *	GtkLabel based update viewer, which is ugly but does more    *
 dnl  * or the                                                        *
 dnl  *	SexyUrlLabel based update viewer which is much more elegant. *
 dnl  *****************************************************************
+AC_ARG_ENABLE(alpha_ui,
+	      AS_HELP_STRING([--enable-alpha-ui=@<:@no/yes@:>@],
+		             [compile with get2gnow's new UI elements enabled.
+                          These add many increased functions but may also
+                          introduce odd display and other various 'issues'.]), ,
+              enable_alpha_ui=no)
 AM_CONDITIONAL(ENABLE_ALPHA_UI, test x$enable_alpha_ui = xyes)
 
 if test x$enable_alpha_ui = xyes ; then
@@ -136,6 +158,14 @@ dnl *******************************************************************
 dnl * Rather to enable the system alert and system button sounds.     *
 dnl *	This may cause pulseaudio related segfaults on some systems.  *
 dnl *******************************************************************
+AC_ARG_ENABLE(sound,
+	      AS_HELP_STRING([--enable-sound=@<:@no/yes@:>@],
+		             [compile with sound and notification alerts enabled.
+                          This may cause pulseaudio related segfaults so while
+                          get2gnow's sound support is being refactored and
+                          improved, to avoid any possibl pulseaudio segfaults
+                          this is a disabled by default.]), ,
+              enable_sound=no)
 AM_CONDITIONAL(ENABLE_SOUND, test x$enable_sound = xyes)
 
 if test x$enable_sound = xyes ; then
@@ -158,6 +188,16 @@ dnl  * get2gnow's package, data, & install variables.           *
 dnl  ***********************************************************/
 PACKAGE="get2gnow"
 AC_SUBST(PACKAGE)
+
+
+dnl -----------------------------------------------------------
+dnl Forces GTK's icon cache to be updated.
+dnl -----------------------------------------------------------
+AC_ARG_ENABLE(gtk_icon_update,
+	      AS_HELP_STRING([--enable-gtk-icon-update=@<:@no/yes@:>@],
+		             [forces gtk-icon-update-icon-cache to be ran reguardless
+			  of the packages icon being found of not.]), ,
+              enable_gtk_icon_update=no)
 
 AM_CONDITIONAL(gtk_update_icon_cache="gtk_update_icon_cache=gtk-update-icon-cache -f -t \$(datadir)/icons/hicolor", test x$enable_gtk_icon_update = xyes)
 
