--- a/config.h.in
+++ b/config.h.in
@@ -91,6 +91,12 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
+/* Define to the version of this package. */
+#undef PACKAGE_RELEASE
+
+/* Define to the version of this package. */
+#undef PACKAGE_RELEASE_VERSION
+
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
