--- a/get2gnow.control.in
+++ b/get2gnow.control.in
@@ -1,5 +1,6 @@
 Package: @PACKAGE_NAME@
 Version: @PACKAGE_VERSION@
+Release: @PACKAGE_RELEASE@
 Architecture: i386
 Maintainer: Kaity G. B. <uberChick@uberChicGeekChick.Com>
 Depends: libart-2.0-2 (>= 2.3.18), libatk1.0-0 (>= 1.20.0), libbonobo2-0 (>= 2.15.0), libbonoboui2-0 (>= 2.15.1), libc6 (>= 2.3.6-6~), libcairo2 (>= 1.2.4), libdbus-1-3 (>= 1.0.2), libdbus-glib-1-2 (>= 0.78), libfontconfig1 (>= 2.4.0), libfreetype6 (>= 2.2.1), libgconf2-4 (>= 2.23.2), libglib2.0-0 (>= 2.20.0), libgnome-keyring0 (>= 2.20.3), libgnome2-0 (>= 2.17.3), libgnomecanvas2-0 (>= 2.11.1), libgnomeui-0 (>= 2.22.0), libgnomevfs2-0 (>= 1:2.17.90), libgtk2.0-0 (>= 2.16.0), libice6 (>= 1:1.0.0), libnotify1 (>= 0.4.5), libnotify1-gtk2.10, liborbit2 (>= 1:2.14.10), libpango1.0-0 (>= 1.14.0), libpopt0 (>= 1.14), libsexy2 (>= 0.1.8), libsm6, libsoup2.4-1 (>= 2.27.92), libssl0.9.8 (>= 0.9.8f-5), libxml2 (>= 2.7.4), zlib1g (>= 1:1.1.4)
